--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,15 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head> 
     <body>
-        <h1>Aca vamos a hacer un blogpost</h1>
-        <p>Este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo del post
+                </h1>
+                <p>
+                    Y este es el parrafo interesante del post
+                </p>
+            </div>
+        </div>
+      
     </body>
 </html>
