Finalizada la cabecera

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo del post
@@ -14,6 +15,8 @@
                 <p>
                     Y este es el parrafo interesante del post
                 </p>
+                <p>Lo interesante en realidad es lo que estoy aprendiendo sobre las ramas de Git</p>
+                <p>No pense que me acordaba tanto sobre html y css xd</p>
             </div>
         </div>
       
