Agregado una mejor tipografia

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
                 <p>
                     Y este es el parrafo interesante del post
                 </p>
+                <p>Mucha cuantas vueltas</p>
             </div>
         </div>
       
