Cambie el titulo

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Hyperblog  </title>
+        <title> Bienvenido al hyperblog  </title>
         <link rel="stylesheet" href="css/estilos.css">
     </head> 
     <body>
