--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,8 @@
                     Sed cras ornare arcu dui. Arcu bibendum at varius vel pharetra vel turpis. Velit dignissim sodales ut eu sem integer vitae justo. Enim facilisis gravida neque convallis. Arcu vitae elementum curabitur vitae nunc sed velit. Porttitor lacus luctus accumsan tortor posuere ac ut consequat. Hendrerit dolor magna eget est lorem ipsum dolor. Viverra nibh cras pulvinar mattis nunc sed. Consectetur libero id faucibus nisl tincidunt eget nullam non. A arcu cursus vitae congue mauris rhoncus aenean vel elit. Morbi enim nunc faucibus a. Volutpat est velit egestas dui. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus iaculis. Vitae suscipit tellus mauris a diam. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Nunc vel risus commodo viverra maecenas accumsan lacus vel. </p>
             </div>
         </div>
+	<div>
+	Cats with disabilities often get overlooked for adoption and without cause. While they may have special needs, they certainly are not any less deserving of love.	</div>
         <a id="back2Top" title="Back to top" href="#">&#10148;
         </a>
         <script src="blog.js"></script>
