Se agrego un icono y se ajusto la cabecera

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <title> Bienvenido a hyperblog 2.0 </title>
+        <title> ฅ•ω•ฅ </title>
         <link rel="stylesheet" href="css/estilos.css">
+        <link rel="icon" href="imagenes/gatito.ico">
     </head> 
     <body>
         <div id="container">
@@ -17,7 +18,8 @@
             </div>
         </div>
 	<div>
-	Cats with disabilities often get overlooked for adoption and without cause. While they may have special needs, they certainly are not any less deserving of love.	</div>
+	Cats with disabilities often get overlooked for adoption and without cause. <br> While they may have special needs, <br> they certainly are not any less deserving of love.	
+    </div>
         <a id="back2Top" title="Back to top" href="#">&#10148;
         </a>
         <script src="blog.js"></script>
