"Se agrego mas espaciado y se movio el texto del post dentro de la cabecera"

--- a/blog.html
+++ b/blog.html
@@ -12,12 +12,10 @@
             </div>
             <div id="post">
                 <p>
-                    I hope that at least a tiny per cent of people will stop being afraid of and change the way they look at disabled cats. It doesn’t matter whether a cat lacks an ear, eye, tail or eye, if it has leukemia or any other disease. It is still a cat. It still purrs, washes itself slowly while squinting it’s eyes, meows, knocks things off the table, pulls clothes off a hanger, sits in it’s beloved box, looks out the window most of the day, tries sitting in weird and much too narrow spaces, sleeps in awkward twisted positions, makes funny faces after smelling something, has huge pupils right before throwing itself in attack, jumps and turns amazingly in mid-air, headbonks…
+		I hope that at least a tiny per cent of people will stop being afraid of and change the way they look at disabled cats. It doesn’t matter whether a cat lacks an ear, eye, tail or eye, if it has leukemia or any other disease. It is still a cat. It still purrs, washes itself slowly while squinting it’s eyes, meows, knocks things off the table, pulls clothes off a hanger, sits in it’s beloved box, looks out the window most of the day, tries sitting in weird and much too narrow spaces, sleeps in awkward twisted positions, makes funny faces after smelling something, has huge pupils right before throwing itself in attack, jumps and turns amazingly in mid-air, headbonks… <br> <br> 
+		Cats with disabilities often get overlooked for adoption and without cause. <br> While they may have special needs, <br> they certainly are not any less deserving of love.
  </p>
             </div>
         </div>
-	<div>
-	Cats with disabilities often get overlooked for adoption and without cause. <br> While they may have special needs, <br> they certainly are not any less deserving of love.	
-    </div>
     </body>
 </html>
