Cambio de titulo

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> ฅ•ω•ฅ </title>
+        <title> ฅミ^ꀾ^ミ </title>
         <link rel="stylesheet" href="css/estilos.css">
         <link rel="icon" href="imagenes/gatito.ico">
     </head> 
