--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="./imagenes/gatito.png" />
+            <a link rel="logo" href="https://imgur.com/snN4eQ4"><img src="https://i.imgur.com/snN4eQ4.png" title="source: imgur.com" /></a>
         <h1>I Am Still a Cat</h1>
             </div>
             <div id="post">
