Nueva maquetación. Se mantuvo la finalidad

--- a/blog.html
+++ b/blog.html
@@ -1,23 +1,81 @@
 <html>
     <head>
-        <title> ฅミ^ꀾ^ミ </title>
+        <title>ฅ  Adopt a Cat  ฅ</title>
         <link rel="stylesheet" href="css/estilos.css">
         <link rel="icon" href="imagenes/gatito.ico">
     </head> 
     <body>
         <div id="container">
             <div id="cabecera">
-            <a link rel="logo" href="https://imgur.com/snN4eQ4"><img src="https://i.imgur.com/snN4eQ4.png" title="source: imgur.com" /></a>
-        <h1>I Am Still a Cat</h1>
+        <h1>I Am Still a Cat </h1>
+        <p>It doesn’t matter whether a cat lacks an ear, eye, tail or eye, if it has leukemia or any other disease. It is still a cat. It still purrs, washes itself slowly while squinting it’s eyes, meows, knocks things off the table, pulls clothes off a hanger, sits in it’s beloved box, looks out the window most of the day, tries sitting in weird and much too narrow spaces, sleeps in awkward twisted positions, makes funny faces after smelling something, has huge pupils right before throwing itself in attack, jumps and turns amazingly in mid-air, headbonks…</p>
             </div>
             <div id="post">
-                <p>
-		I hope that at least a tiny per cent of people will stop being afraid of and change the way they look at disabled cats. It doesn’t matter whether a cat lacks an ear, eye, tail or eye, if it has leukemia or any other disease. It is still a cat. It still purrs, washes itself slowly while squinting it’s eyes, meows, knocks things off the table, pulls clothes off a hanger, sits in it’s beloved box, looks out the window most of the day, tries sitting in weird and much too narrow spaces, sleeps in awkward twisted positions, makes funny faces after smelling something, has huge pupils right before throwing itself in attack, jumps and turns amazingly in mid-air, headbonks… <br> <br> 
-        <div id="foto contenido"> 
-            <a href="https://imgur.com/GxjSFUU"><img src="https://i.imgur.com/GxjSFUU.png?1" title="source: imgur.com" /></a>
-        </div>
-		Cats with disabilities often get overlooked for adoption and without cause. <br> While they may have special needs, <br> they certainly are not any less deserving of love.
- </p>
+                <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">  
+                <section class="hero-section">  
+                 <div class="card-grid">  
+                  <a class="card" href="#">  
+                   <div class="card__background" style="background-image: url(https://i.imgur.com/RhA7mp3.jpg)"></div>  
+                   <div class="card__content">  
+                    <p class="card__category">Adopt Me</p>  
+                    <h3 class="card__heading">Charlie was rescued from a high kill shelter in Los Angeles.</h3>  
+                   </div>  
+                  </a>  
+                  <a class="card" href="#">  
+                   <div class="card__background" style="background-image: url(https://i.imgur.com/gVT6CeD.jpg)"></div>  
+                   <div class="card__content">  
+                    <p class="card__category">Adopt Me</p>  
+                    <h3 class="card__heading">Daisy came from a hoarder with 200 cats and 100 dogs.</h3>  
+                   </div>  
+                  </a>  
+                  <a class="card" href="#">  
+                   <div class="card__background" style="background-image: url(https://i.imgur.com/de0q052.jpg)"></div>  
+                   <div class="card__content">  
+                    <p class="card__category">Adopt Me</p>  
+                    <h3 class="card__heading">Regis was rescued. He had glaucoma and his eyes had to be removed.</h3>  
+                   </div>  
+                  </li>  
+                  <a class="card" href="#">  
+                   <div class="card__background" style="background-image: url(https://i.imgur.com/J9NZqt9.jpg)"></div>  
+                   <div class="card__content">  
+                    <p class="card__category"> Adopt Me</p>  
+                    <h3 class="card__heading">Sir Thomas Trueheart had acid deliberately poured on his face.</h3>  
+                   </div>  
+                  </a>  
+                  <footer>  
+                    <div class="content">  
+                      <div class="top">  
+                        <div class="logo-details">  
+                          <span class="logo_name">Logo</span>  
+                        </div>  
+                        <div class="media-icons">
+                          <a href="#"><i class="fa fa-facebook"></i></a>  
+                          <a href="#"><i class="fa fa-twitter"></i></a>  
+                          <a href="#"><i class="fa fa-instagram"></i></a>  
+                          <a href="#"><i class="fa fa-linkedin"></i></a>  
+                          <a href="#"><i class="fa fa-youtube"></i></a>
+                        </div>  
+                      </div>  
+                      <div class="link-boxes">  
+                        <ul class="box">  
+                          <li class="link_name">Links</li>  
+                          <li><a href="#">Contact</a></li>  
+                          <li><a href="#">About Us</a></li>  
+                        </ul>  
+                        <ul class="box">  
+                          <li class="link_name">Services</li>
+                        </ul>   
+                        <ul class="box">  
+                          <li class="link_name">Contact</li>
+                          <li><a href="#">+919 9999999999</a></li>  
+                          <li><a href="#">+919 9999999999</a></li> 
+                        </ul>  
+                      </div>  
+                    </div>  
+                    </div>  
+                  </footer>  
+                </section>  
+
             </div>
         </div>
     </body>
