Correccion de conflictos con links

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,500;1,500&family=Dosis:wght@200&family=Montserrat:ital,wght@1,300&family=Playfair+Display&family=Quicksand:wght@300;500;700&family=Raleway:wght@200&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="css/estilos.css" href="css/estilos.css">
 </head>
 <body>
 
