--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;700&family=Rubik+Iso&family=Silkscreen&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
-    <!-- ==== HEADER ==== -->
     <header class="container header">
-      <!-- ==== NAVBAR ==== -->
       <nav class="nav">
         <div class="logo">
           <h2>Adopt A Cat</h2>
@@ -52,7 +50,7 @@
         <div class="grid-cols-2">
           <div class="grid-item-1">
             <h1 class="main-heading">
-              A <span>safe shelter network</span>  where you can adopt and care for your new best friend.
+              A <span>safe shelter network</span>  where you can adopt and care for your new best friend
             </h1>
             <p class="info-text">
               Find your new feline companion today.
@@ -84,7 +82,7 @@
               <img src="./images/purrfect.png" alt="">
             </div>
             <div class="featured_info">
-              <span>Give a kitten a home.</span>
+              <span>Give a kitten a home</span>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
                 ratione facilis animi voluptas exercitationem molestiae.
